--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "core-js": "^2.4.1",
     "d3": "^4.11.0",
     "rxjs": "^6.6.0",
+    "rxjs-compat": "^6.0.0-rc.0",
     "ts-helpers": "^1.1.2",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.2",
-    "rxjs-compat": "^6.0.0-rc.0"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1000.3",
