--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1000.3",
+    "@angular-devkit/build-angular": "^12.2.7",
     "@angular/cli": "^10.0.3",
     "@angular/compiler-cli": "^10.0.4",
     "@types/d3": "^4.4.1",
